# raytracer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  settings.json
include/raytracer/: box.hpp  camera.hpp  canvas.hpp  hitable.hpp  kernel.hpp  material.hpp  math.hpp  ray.hpp  scene.hpp  segment.hpp  sphere.hpp  static_vector.hpp  utils.hpp  vector.hpp
include/raytracer/debug/: profile.hpp
include/raytracer/hitables/: kdtree.hpp  scene.hpp  sphere.hpp
include/raytracer/jobs/: closure.hpp  engine.hpp  job.hpp  jobqueue.hpp  lockedjobqueue.hpp  pool.hpp  worker.hpp
include/raytracer/materials/: dielectric.hpp  lambertian.hpp  metal.hpp
include/raytracer/reflection/: factory.hpp  from_json.hpp
include/raytracer/runtime/: options_parser.hpp  settings.hpp
src/: CMakeLists.txt  canvas.cpp  float.hpp  main.cpp  mandelbrot.cpp  math.cpp  ray.cpp  raytracer.cpp  vector.cpp
src/jobs/: CMakeLists.txt  engine.cpp  example.cpp  job.cpp  jobqueue.cpp  lockedjobqueue.cpp  pool.cpp  worker.cpp
src/lib/: CMakeLists.txt  box.cpp  camera.cpp  canvas.cpp  float.hpp  hitable.cpp  material.cpp  math.cpp  ray.cpp  scene.cpp  segment.cpp  sphere.cpp  vector.cpp
src/lib/hitables/: kdtree.cpp  scene.cpp  sphere.cpp
src/lib/materials/: dielectric.cpp  lambertian.cpp  metal.cpp
src/lib/reflection/: factory.cpp
src/runtime/: CMakeLists.txt  run.cpp  runtime.cpp  settings.cpp
